# sitecopy

./: .cvsignore  .gitignore  .gitmodules  .release.sh  .update-po.sh  BUGS  Makefile.in  NEWS  README  README.md  THANKS  autogen.sh  configure.ac  configure.in  sitecopy.spec.in
.github/workflows/: ci.yml
debian/: xsitecopy.manpages
doc/: sitecopy.1
gnome/: file_widgets.h  gcommon.h  main.c  misc.h  new_site.c  operations.c  operations.h
po/: Makevars.template  POTFILES.in  cs.po  de.po  fr.po  it.po  ja.po  nn.po  ru.po  sitecopy.pot  tr.po
sitecopy/tags/0.14.3/: .release.sh  BUGS  Makefile.in
sitecopy/tags/0.14.3/debian/: changelog
sitecopy/tags/0.14.3/gnome/: init.c  init.h  minilist.h  misc.c  new_site.h  resynch.h  site_widgets.h  tree.c
sitecopy/tags/0.14.3/po/: POTFILES.in  cs.po  it.po  ja.po  tr.po
sitecopy/tags/0.14.3/src/: common.c  console_fe.c  davdriver.c  ftp.c  lsparser.c  lsparser.h  rshdriver.c  sitefiles.c  sites.c  sites.h
sitecopy/tags/0.15.0/: NEWS  configure.in
sitecopy/tags/0.15.0/debian/: control  rules  xsitecopy.menu
sitecopy/tags/0.15.0/doc/: sitecopy.1
sitecopy/tags/0.15.0/gnome/: changes.c  changes.h  minilist.c  resynch.c  site_widgets.c
sitecopy/tags/0.15.0/po/: cs.po  de.po  fr.po
sitecopy/tags/0.15.0/src/: common.h  ftpdriver.c  lsparser.h  rshdriver.c  sftpdriver.c  sites.c  sitestore.c
sitecopy/tags/0.15.1/: NEWS  TODO
sitecopy/tags/0.15.1/debian/: copyright  sitecopy.manpages
sitecopy/tags/0.15.1/doc/: sitecopy.1
sitecopy/tags/0.15.1/gnome/: minilist.c  misc.c
sitecopy/tags/0.15.1/po/: cs.po  it.po  ja.po  nn.po  ru.po
sitecopy/tags/0.15.1/src/: console_fe.c  davdriver.c  lsparser.c
sitecopy/tags/0.16.0/: configure.in
sitecopy/tags/0.16.0/po/: de.po  it.po  nn.po  sitecopy.pot
sitecopy/tags/0.16.0/src/: sites.c
sitecopy/tags/0.16.1/: BUGS  TODO
sitecopy/tags/0.16.1/po/: cs.po
sitecopy/tags/0.16.1/src/: davdriver.c  ftp.c
sitecopy/tags/0.16.2/: configure.in
sitecopy/tags/0.16.2/po/: ja.po  ru.po  sitecopy.pot
sitecopy/tags/0.16.2/src/: davdriver.c  fileset.h  sitesi.h
sitecopy/tags/0.16.3/po/: fr.po  it.po
sitecopy/tags/0.16.3/src/: console_fe.c  sites.c
sitecopy/tags/0.16.4/po/: sitecopy.pot
sitecopy/tags/0.16.4/src/: common.h  console_fe.c  rcfile.c  sites.c
sitecopy/tags/0.16.5/: NEWS  configure.in
sitecopy/tags/0.16.5/po/: ja.po
sitecopy/tags/0.16.6/: .update-po.sh  Makefile.in
sitecopy/tags/0.16.6/doc/: sitecopy.1
sitecopy/tags/0.16.6/po/: de.po  fr.po  ru.po
sitecopy/tags/0.16.6/src/: frontend.h
sitecopy/trunk/: .release.sh  .update-po.sh  BUGS  Makefile.in  NEWS  README  README.os2  TODO  autogen.sh  configure.in
sitecopy/trunk/debian/: xsitecopy.docs
sitecopy/trunk/doc/: .cvsignore  sitecopy.1  sitecopy.fr.1
sitecopy/trunk/gnome/: file_widgets.c  gcommon.c  tree.h
sitecopy/trunk/gnome/doc/: .cvsignore
sitecopy/trunk/po/: .cvsignore  LINGUAS  POTFILES.in  cs.po  de.po  fr.po  it.po  ja.po  nn.po  ru.po  sitecopy.pot  tr.po
sitecopy/trunk/src/: console_fe.c  davdriver.c  fileset.c  frontend.h  ftp.c  lsparser.c  protocol.h  rcfile.c  rshdriver.c  sitefiles.c  sites.c  sites.h  sitesi.h  sitestore.c
src/: common.h  console_fe.c  davdriver.c  fileset.c  fileset.h  frontend.h  ftp.c  lsparser.c  nulldriver.c  protocol.h  rcfile.c  rshdriver.c  sftpdriver.c  sitefiles.c  sites.c  sites.h  sitestore.c
tests/: common.py  conftest.py  httpd-Containerfile  httpd.conf  test_basic.py  test_dav.py
